src/parser/snapshots/texlab__parser__latex__tests__parse@color_definition_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/color/color_definition_simple.txt
---
ROOT@0..33
  PREAMBLE@0..33
    COLOR_DEFINITION@0..33
      COLOR_DEFINITION_NAME@0..12 "\\definecolor"
      CURLY_GROUP_WORD@12..17
        L_CURLY@12..13 "{"
        KEY@13..16
          WORD@13..16 "foo"
        R_CURLY@16..17 "}"
      CURLY_GROUP_WORD@17..22
        L_CURLY@17..18 "{"
        KEY@18..21
          WORD@18..21 "rgb"
        R_CURLY@21..22 "}"
      CURLY_GROUP@22..33
        L_CURLY@22..23 "{"
        TEXT@23..32
          WORD@23..26 "255"
          COMMA@26..27 ","
          WORD@27..30 "168"
          COMMA@30..31 ","
          WORD@31..32 "0"
        R_CURLY@32..33 "}"

