src/parser/snapshots/texlab__parser__latex__tests__parse@command_definition_no_impl.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/command_definition/command_definition_no_impl.txt
---
ROOT@0..17
  PREAMBLE@0..17
    COMMAND_DEFINITION@0..17
      COMMAND_DEFINITION_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..17
        L_CURLY@11..12 "{"
        GENERIC_COMMAND_NAME@12..16 "\\foo"
        R_CURLY@16..17 "}"
      MISSING@17..17 ""

