src/parser/snapshots/texlab__parser__latex__tests__parse@command_definition_optional.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/command_definition/command_definition_optional.txt
---
ROOT@0..29
  PREAMBLE@0..29
    COMMAND_DEFINITION@0..29
      COMMAND_DEFINITION_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..17
        L_CURLY@11..12 "{"
        GENERIC_COMMAND_NAME@12..16 "\\foo"
        R_CURLY@16..17 "}"
      BRACK_GROUP_WORD@17..20
        L_BRACK@17..18 "["
        KEY@18..19
          WORD@18..19 "1"
        R_BRACK@19..20 "]"
      BRACK_GROUP@20..25
        L_BRACK@20..21 "["
        TEXT@21..24
          WORD@21..24 "def"
        R_BRACK@24..25 "]"
      CURLY_GROUP@25..29
        L_CURLY@25..26 "{"
        TEXT@26..28
          WORD@26..28 "#1"
        R_CURLY@28..29 "}"

