src/parser/snapshots/texlab__parser__latex__tests__parse@curly_group_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/group/curly_group_simple.txt
---
ROOT@0..13
  PREAMBLE@0..13
    CURLY_GROUP@0..13
      L_CURLY@0..1 "{"
      TEXT@1..12
        WORD@1..6 "hello"
        WHITESPACE@6..7 " "
        WORD@7..12 "world"
      R_CURLY@12..13 "}"

